--- a/product-card.html
+++ b/product-card.html
@@ -14,7 +14,7 @@
   <body class="bg-light">
    <div class="container my-5">
       <div class="row justify-content-center">
-         <div class="col-lg-8">
+         <div class="col-8">
             <div class="card mb-4 shadow">
                <div class="row g-0">
                   <div class="col-xl-3 col-md-4">
@@ -57,7 +57,7 @@
                </div>
             </div>
          </div>
-         <div class="col-lg-8">
+         <div class="col-4">
             <div class="card mb-4 shadow">
                <div class="row g-0">
                   <div class="col-xl-3 col-md-4">
